You know the rules and so do I
